--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- Adicione o link para os ícones Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- Mantenha os meta tags originais -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Links</title>
-    <meta name="theme-color" content="#2d0ca1">
+    <meta name="theme-color" content="#9370DB">
     <meta property="og:title" content="Gerenciador de Links ">
     <meta property="og:description" content="Salve seus links favoritos e compartilhe com amigos!">
     <meta property="og:image" content="https://gerenciadorlinks.netlify.app/img/download.png">
@@ -14,6 +17,7 @@
     <meta property="og:url" content="https://gerenciadorlinks.netlify.app/">
     <meta property="og:type" content="website">
     <style>
+        /* Mantenha os estilos originais e adicione os novos */
         * {
             margin: 0;
             padding: 0;
@@ -25,17 +29,17 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #2d0ca1;
+            background-color: #9370DB;
         }
 
         h1 {
             text-align: center;
-            color: #f8f2f2;
+            color: #E6E6FA;
             margin-bottom: 30px;
         }
 
         .form-container {
-            background-color: rgb(151, 131, 131);
+            background-color: #8A2BE2;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -61,11 +65,12 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #00FF00;
+            color:#8B0000 ;
         }
 
         .links-list {
-            background-color: rgb(151, 131, 131);
+            background-color: #8A2BE2;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -93,16 +98,31 @@
         }
 
         .link-item a:hover {
-            color: #4CAF50;
+            color: #00FF00;
         }
 
-        .delete-btn {
-            background-color: #ff4444;
+        /* Novos estilos para ícones */
+        .icon-btn {
+            cursor: pointer;
             margin-left: 10px;
+            font-size: 18px;
+            transition: color 0.3s;
         }
 
-        .delete-btn:hover {
-            background-color: #cc0000;
+        .delete-icon {
+            color: #ff4444;
+        }
+
+        .delete-icon:hover {
+            color: #cc0000;
+        }
+
+        .share-icon {
+            color: #25D366;
+        }
+
+        .share-icon:hover {
+            color: #128C7E;
         }
     </style>
 </head>
@@ -120,15 +140,20 @@
     <div class="links-list" id="linksList"></div>
 
     <script>
-        // Carrega links do localStorage ao iniciar
+        // Função para compartilhar via WhatsApp
+        function shareLink(url, name) {
+            const text = `Confira este link: ${name} - ${url}`;
+            const encodedText = encodeURIComponent(text);
+            window.open(`https://wa.me/?text=${encodedText}`, '_blank');
+        }
+
+        // Mantenha o código original com as modificações necessárias
         let links = JSON.parse(localStorage.getItem('links')) || [];
 
-        // Função para salvar links no localStorage
         function saveLinks() {
             localStorage.setItem('links', JSON.stringify(links));
         }
 
-        // Função para exibir links
         function displayLinks() {
             const linksList = document.getElementById('linksList');
             linksList.innerHTML = '';
@@ -138,26 +163,28 @@
                 linkElement.className = 'link-item';
                 linkElement.innerHTML = `
                     <a href="${link.url}" target="_blank">${link.name}</a>
-                    <button class="delete-btn" onclick="deleteLink(${index})">Excluir</button>
+                    <div>
+                        <i class="fas fa-share-from-square share-icon icon-btn" 
+                           onclick="shareLink('${link.url}', '${link.name}')"></i>
+                        <i class="fas fa-trash delete-icon icon-btn" 
+                           onclick="deleteLink(${index})"></i>
+                    </div>
                 `;
                 linksList.appendChild(linkElement);
             });
         }
 
-        // Função para adicionar novo link
         function addLink(event) {
             event.preventDefault();
             
             const nameInput = document.getElementById('linkName');
             const urlInput = document.getElementById('linkUrl');
             
-            // Validação básica
             if (!nameInput.value || !urlInput.value) {
                 alert('Por favor, preencha todos os campos!');
                 return;
             }
 
-            // Adiciona http:// se necessário
             let url = urlInput.value;
             if (!url.startsWith('http://') && !url.startsWith('https://')) {
                 url = `http://${url}`;
@@ -172,22 +199,17 @@
             saveLinks();
             displayLinks();
 
-            // Limpa os campos do formulário
             nameInput.value = '';
             urlInput.value = '';
         }
 
-        // Função para excluir link
         function deleteLink(index) {
             links.splice(index, 1);
             saveLinks();
             displayLinks();
         }
 
-        // Event listeners
         document.getElementById('linkForm').addEventListener('submit', addLink);
-
-        // Exibe os links ao carregar a página
         displayLinks();
     </script>
 </body>
