--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #9370DB;
+            background-color: #222;
         }
 
         h1 {
             text-align: center;
-            color: #E6E6FA;
+            color: #fff;
             margin-bottom: 30px;
         }
 
         .form-container {
-            background-color: #8A2BE2;
+            background-color: rgba(255, 255, 255, 0.2);
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -70,7 +70,7 @@
         }
 
         .links-list {
-            background-color: #8A2BE2;
+            background-color: rgba(255, 255, 255, 0.2);
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -110,11 +110,11 @@
         }
 
         .delete-icon {
-            color: #ff4444;
+            color: #000;
         }
 
         .delete-icon:hover {
-            color: #cc0000;
+            color: #292424;
         }
 
         .share-icon {
